# stemtube-desktop-friend

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Lancer friend-v2 (dev).bat  README.md  STATUS.md  StemTube Desktop.bat  app.py  build_tauri.py  build_windows.py  check_config.py  edition.py  extensions.py  installer.iss  installer_tauri.iss  launcher.py  nuitka_build.py  package-lock.json  package.json  patch_madmom.py  setup_dependencies.py  setup_desktop.py  stemtube-backend.spec
core/: __init__.py  aiotube_client.py  auth_db.py  auth_models.py  btc_chord_detector.py  chord_detector.py  config.json  config.py  demucs_wrapper.py  download_manager.py  downloads_db.py  file_cleanup.py  hybrid_chord_detector.py  js_runtime.py  licensing.py  llm_structure_analyzer.py  logging_config.py  lrclib_client.py  lyrics_aligner.py  lyrics_detector.py  lyrics_merger.py  madmom_chord_detector.py  metadata_extractor.py  msaf_structure_detector.py  music_start_detector.py  musixmatch_client.py  request_logging.py  stems_extractor.py  structure_detector.py  syncedlyrics_client.py  vocal_onset_detector.py  wrap_demucs.py
docs/: PROCESSING_FLOW.md  WINDOWS_SETUP_GUIDE.md
routes/: __init__.py  admin_api.py  config_routes.py  downloads.py  extractions.py  files.py  library.py  license_routes.py  media.py  pages.py  poc_mixer.py  recordings.py
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
templates/: index.html  login.html  mixer.html
tests/: test_tauri_integration.py
utils/: README.txt  (+1 more)
(+166 files in other folders)
